[package]
name = "avm"
version = "0.31.0"
edition = "2021"

[[bin]]
name = "avm"
path = "src/main.rs"

[[bin]]
name = "anchor"
path = "src/anchor/main.rs"

[dependencies]
anyhow = { workspace = true }
cargo_toml = { workspace = true }
cfg-if = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
clap_complete = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json", "rustls-tls"] }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
tempfile = { workspace = true }
