[package]
name = "anchor-cli"
version = "0.31.0"
authors = ["Anchor Maintainers <accounts@200ms.io>"]
edition = "2021"
repository = "https://github.com/coral-xyz/anchor"
description = "Anchor CLI"
license = "Apache-2.0"

[[bin]]
name = "anchor"
path = "src/bin/main.rs"

[features]
dev = []

[dependencies]
anchor-client = { workspace = true }
anchor-lang-idl = { workspace = true, features = ["build", "convert"] }
anchor-lang = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
cargo_toml = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
clap_complete = { workspace = true }
dirs = { workspace = true }
flate2 = { workspace = true }
heck = { workspace = true }
pathdiff = { workspace = true }
portpicker = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["multipart", "blocking", "rustls-tls"] }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shellexpand = { workspace = true }
solana-client = { workspace = true }
solana-cli-config = { workspace = true }
solana-faucet = { workspace = true }
solana-sdk = { workspace = true }
# Pin solang-parser because it may break in a backwards incompatible way in minor versions
solang-parser = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }
tar = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
