[package]
name = "anchor-cli"
version = "0.31.0"
authors = ["Anchor Maintainers <accounts@200ms.io>"]
edition = "2021"
repository = "https://github.com/coral-xyz/anchor"
description = "Anchor CLI"
license = "Apache-2.0"

[[bin]]
name = "anchor"
path = "src/bin/main.rs"

[features]
dev = []

[dependencies]
anchor-client = { path = "../client", version = "0.31.0" }
anchor-lang-idl = { path = "../idl", version = "0.1.2", features = ["build", "convert"] }
anchor-lang = { path = "../lang", version = "0.31.0" }
anyhow = "1.0.32"
base64 = "0.21"
bincode = "1.3.3"
cargo_toml = "0.19.2"
chrono = "0.4.19"
clap = { version = "4.5.17", features = ["derive"] }
clap_complete = "4.5.26"
dirs = "4.0"
flate2 = "1.0.19"
heck = "0.4.0"
pathdiff = { workspace = true }
portpicker = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["multipart", "blocking", "rustls-tls"] }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shellexpand = { workspace = true }
solana-client = { workspace = true }
solana-cli-config = { workspace = true }
solana-faucet = { workspace = true }
solana-sdk = { workspace = true }
# Pin solang-parser because it may break in a backwards incompatible way in minor versions
solang-parser = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }
tar = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
