[package]
name = "anchor-lang"
version = "0.30.1"
authors = ["Anchor Maintainers <accounts@200ms.io>"]
repository = "https://github.com/coral-xyz/anchor"
edition = "2021"
license = "Apache-2.0"
description = "Solana Sealevel eDSL"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
allow-missing-optionals = ["anchor-derive-accounts/allow-missing-optionals"]
anchor-debug = [
    "anchor-attribute-access-control/anchor-debug",
    "anchor-attribute-account/anchor-debug",
    "anchor-attribute-constant/anchor-debug",
    "anchor-attribute-error/anchor-debug",
    "anchor-attribute-event/anchor-debug",
    "anchor-attribute-program/anchor-debug",
    "anchor-derive-accounts/anchor-debug"
]
derive = []
event-cpi = ["anchor-attribute-event/event-cpi"]
idl-build = [
    "anchor-attribute-account/idl-build",
    "anchor-attribute-constant/idl-build",
    "anchor-attribute-event/idl-build",
    "anchor-attribute-error/idl-build",
    "anchor-attribute-program/idl-build",
    "anchor-derive-accounts/idl-build",
    "anchor-derive-serde/idl-build",
    "anchor-lang-idl/build",
]
init-if-needed = ["anchor-derive-accounts/init-if-needed"]
interface-instructions = ["anchor-attribute-program/interface-instructions"]

[dependencies]
anchor-attribute-access-control = { path = "./attribute/access-control", version = "0.30.1" }
anchor-attribute-account = { path = "./attribute/account", version = "0.30.1" }
anchor-attribute-constant = { path = "./attribute/constant", version = "0.30.1" }
anchor-attribute-error = { path = "./attribute/error", version = "0.30.1" }
anchor-attribute-event = { path = "./attribute/event", version = "0.30.1" }
anchor-attribute-program = { path = "./attribute/program", version = "0.30.1" }
anchor-derive-accounts = { path = "./derive/accounts", version = "0.30.1" }
anchor-derive-serde = { path = "./derive/serde", version = "0.30.1" }
anchor-derive-space = { path = "./derive/space", version = "0.30.1" }

# `anchor-lang-idl` should only be included with `idl-build` feature
anchor-lang-idl = { path = "../idl", version = "0.1.1", optional = true }

arrayref = "0.3"
base64 = "0.21"
bincode = "1"
borsh = ">=0.9, <0.11"
bytemuck = "1"
solana-program = "1.17.3"
thiserror = "1"
