[package]
name = "anchor-lang"
version = "0.31.0"
authors = ["Anchor Maintainers <accounts@200ms.io>"]
repository = "https://github.com/coral-xyz/anchor"
edition = "2021"
license = "Apache-2.0"
description = "Solana Sealevel eDSL"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
allow-missing-optionals = ["anchor-derive-accounts/allow-missing-optionals"]
anchor-debug = [
    "anchor-attribute-access-control/anchor-debug",
    "anchor-attribute-account/anchor-debug",
    "anchor-attribute-constant/anchor-debug",
    "anchor-attribute-error/anchor-debug",
    "anchor-attribute-event/anchor-debug",
    "anchor-attribute-program/anchor-debug",
    "anchor-derive-accounts/anchor-debug"
]
derive = []
event-cpi = ["anchor-attribute-event/event-cpi"]
idl-build = [
    "anchor-attribute-account/idl-build",
    "anchor-attribute-constant/idl-build",
    "anchor-attribute-event/idl-build",
    "anchor-attribute-error/idl-build",
    "anchor-attribute-program/idl-build",
    "anchor-derive-accounts/idl-build",
    "anchor-derive-serde/idl-build",
    "anchor-lang-idl/build",
]
init-if-needed = ["anchor-derive-accounts/init-if-needed"]
interface-instructions = ["anchor-attribute-program/interface-instructions"]
lazy-account = ["anchor-attribute-account/lazy-account", "anchor-derive-serde/lazy-account"]

[dependencies]
anchor-attribute-access-control = { workspace = true }
anchor-attribute-account = { workspace = true }
anchor-attribute-constant = { workspace = true }
anchor-attribute-error = { workspace = true }
anchor-attribute-event = { workspace = true }
anchor-attribute-program = { workspace = true }
anchor-derive-accounts = { workspace = true }
anchor-derive-serde = { workspace = true }
anchor-derive-space = { workspace = true }

# `anchor-lang-idl` should only be included with `idl-build` feature
anchor-lang-idl = { workspace = true, optional = true }

base64 = { workspace = true }
bincode = { workspace = true }
borsh = { workspace = true }
bytemuck = { workspace = true }
solana-program = { workspace = true }
thiserror = { workspace = true }

# v1.9 specifies `rust-version = "1.84"`, which causes compatibility issues with Solana build
# tools' Rust version (1.79.0 at the time of writing this comment).
# TODO: Remove when the Solana version we use comes with Rust version >= 1.84
bytemuck_derive = { workspace = true }
