[package]
name = "anchor-spl"
version = "0.30.1"
authors = ["Anchor Maintainers <accounts@200ms.io>"]
edition = "2021"
license = "Apache-2.0"
description = "CPI clients for SPL programs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["associated_token", "mint", "token", "token_2022", "token_2022_extensions"]
associated_token = ["spl-associated-token-account"]
devnet = []
governance = []
idl-build = ["anchor-lang/idl-build"]
memo = ["spl-memo"]
metadata = ["mpl-token-metadata"]
mint = []
stake = ["borsh"]
token = ["spl-token"]
token_2022 = ["spl-token-2022"]
token_2022_extensions = ["spl-token-2022", "spl-token-group-interface", "spl-token-metadata-interface", "spl-pod"]

[dependencies]
anchor-lang = { path = "../lang", version = "0.30.1", features = ["derive"] }
borsh = { version = "0.10.3", optional = true }
mpl-token-metadata = { version = "5", optional = true }
spl-associated-token-account = { version = "6", features = ["no-entrypoint"], optional = true }
spl-memo = { version = "6", features = ["no-entrypoint"], optional = true }
spl-token = { version = "7", features = ["no-entrypoint"], optional = true }
spl-token-2022 = { version = "6", features = ["no-entrypoint"], optional = true }
spl-token-group-interface = { version = "0.5", optional = true }
spl-token-metadata-interface = { version = "0.6", optional = true }
spl-pod = { version = "0.5", optional = true }
