[package]
name = "anchor-syn"
version = "0.1.0"
authors = ["armaniferrante <armaniferrante@gmail.com>"]
edition = "2018"

[features]
idl = []
default = []

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0.54", features = ["full", "extra-traits", "parsing"] }
anyhow = "1.0.32"
heck = "0.3.1"
serde = { version = "1.0.118", features = ["derive"] }
