[package]
name = "basic-program"
version = "0.1.0"
description = "Anchor example"
repository = "https://github.com/project-serum/serum-dex"
edition = "2018"

[workspace]

[lib]
crate-type = ["cdylib"]
name = "basic_program"

[features]
no-entry = []
program = []
client = []
default = []

[dependencies]
spl-token = { version = "2.0.6", default-features = false, features = ["program", "no-entrypoint"] }
borsh = { git = "https://github.com/project-serum/borsh", branch = "serum", features = ["serum-program"] }
solana-program = "1.4.3"
solana-sdk = { version = "1.3.14", default-features = false, features = ["program"] }
anchor = { path = "../../", feautres = ["derive"] }

[dev-dependencies]
# solana-client-gen = { path = "../solana-client-gen", features = ["client"] }

[profile.release]
lto = true

[profile.test]
opt-level = 2
