[package]
name = "basic-program"
version = "0.1.0"
description = "Basic example"
edition = "2018"

[lib]
crate-type = ["cdylib"]
name = "basic_program"

[dependencies]
borsh = { git = "https://github.com/project-serum/borsh", branch = "serum", features = ["serum-program"] }
solana-program = "1.4.3"
solana-sdk = { version = "1.3.14", default-features = false, features = ["program"] }
anchor = { path = "../../", features = ["derive"] }
