[package]
name = "anchor-common"
version = "0.22.0"
authors = ["Serum Foundation <foundation@projectserum.com>"]
repository = "https://github.com/project-serum/anchor"
license = "Apache-2.0"
description = "Common utilities for internal anchor lang crates"
edition = "2018"

[features]
default = []
deprecated-layout = []

[dependencies]
arrayref = "0.3.6"
solana-program = "1.8.5"
