[package]
name = "anchor-fuzzing"
version = "0.3.0"
authors = ["armaniferrante <armaniferrante@gmail.com>"]
edition = "2018"

[dependencies]
bincode = "1.3.1"
bumpalo = { version = "3.4.0", features = ["collections", "boxed"] }
lazy_static = "1.4.0"
rand = "0.7.3"
safe-transmute = "0.11.0"
spl-token = { version = "3.0.1", features = ["no-entrypoint"] }
solana-program = "=1.5.15"
