[package]
name = "anchor-syn"
version = "0.29.0"
authors = ["Anchor Maintainers <accounts@200ms.io>"]
repository = "https://github.com/coral-xyz/anchor"
license = "Apache-2.0"
description = "Anchor syntax parsing and code generation tools"
rust-version = "1.60"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
allow-missing-optionals = []
anchor-debug = []
event-cpi = []
hash = []
idl-build = ["idl-types", "cargo_toml"]
idl-types = []
init-if-needed = []
interface-instructions = []

[dependencies]
anyhow = "1"
bs58 = "0.5"
heck = "0.3"
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
syn = { version = "1", features = ["full", "extra-traits", "parsing"] }
thiserror = "1"

# `idl-build` feature only
cargo_toml = { version = "0.15", optional = true }
