[package]
name = "anchor-syn"
version = "0.30.1"
authors = ["Anchor Maintainers <accounts@200ms.io>"]
repository = "https://github.com/coral-xyz/anchor"
license = "Apache-2.0"
description = "Anchor syntax parsing and code generation tools"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
allow-missing-optionals = []
anchor-debug = []
event-cpi = []
hash = []
idl-build = ["cargo_toml"]
init-if-needed = []
interface-instructions = []

[dependencies]
anyhow = "1"
bs58 = "0.5"
heck = "0.3"
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
syn = { version = "1", features = ["full", "extra-traits", "parsing"] }
thiserror = "1"

# `idl-build` feature only
cargo_toml = { version = "0.19", optional = true }

# https://blog.rust-lang.org/2024/05/06/check-cfg.html#expecting-custom-cfgs
[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ["cfg(procmacro2_semver_exempt)"] }
