[package]
name = "anchor-syn"
version = "0.31.0"
authors = ["Anchor Maintainers <accounts@200ms.io>"]
repository = "https://github.com/coral-xyz/anchor"
license = "Apache-2.0"
description = "Anchor syntax parsing and code generation tools"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
allow-missing-optionals = []
anchor-debug = []
event-cpi = []
hash = []
idl-build = ["cargo_toml"]
init-if-needed = []
interface-instructions = []

[dependencies]
anyhow = { workspace = true }
bs58 = { workspace = true }
heck = { workspace = true }
proc-macro2 = { workspace = true, features = ["span-locations"] }
quote = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits", "parsing"] }
thiserror = { workspace = true }

# `idl-build` feature only
cargo_toml = { workspace = true, optional = true }

# https://blog.rust-lang.org/2024/05/06/check-cfg.html#expecting-custom-cfgs
[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ["cfg(procmacro2_semver_exempt)"] }
