[package]
name            = "anchor-attribute-access-control"
version         = "0.28.0"
authors         = { workspace = true }
repository      = { workspace = true }
license         = { workspace = true }
description     = "Anchor attribute macro for instruction access control"
rust-version    = { workspace = true }
edition         = { workspace = true }

[lib]
proc-macro = true

[features]
anchor-debug = ["anchor-syn/anchor-debug"]

[dependencies]
anchor-syn      = { workspace = true }
anyhow          = { workspace = true }
proc-macro2     = { workspace = true }
quote           = { workspace = true }
regex           = { workspace = true }
syn             = { workspace = true, features = ["full"] }
