[package]
name = "anchor-attribute-account"
version = "0.28.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Anchor attribute macro for defining an account"

[lib]
proc-macro = true

[features]
idl-build = ["anchor-syn/idl-build"]
anchor-debug = ["anchor-syn/anchor-debug"]

[dependencies]
anchor-syn = { workspace = true, features = ["hash"] }
anyhow = { workspace = true }
bs58 = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
rustversion = { workspace = true }
syn = { workspace = true, features = ["full"] }
